--- a/index.html
+++ b/index.html
@@ -10,19 +10,19 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-<!-- ===== HEADER ===== -->
+<!--  HEADER -->
 <header class="header">
   <div class="logo">Laptop<span>Zone</span></div>
   <nav class="nav">
-    <a href="#">Home</a>
-    <a href="#">About</a>
-    <a href="#">Gallery</a>
-    <a href="#">Contact</a>
+    <a href="#home">Home</a>
+    <a href="#about">About</a>
+    <a href="#gallery">Gallery</a>
+    <a href="#contact">Contact</a>
   </nav>
 </header>
 
 <!-- HOME SECTION 1 -->
-<section class="home1">
+<section class="home1" id="home">
   <div class="home-content">
     <h1>Debitis, Ipsum</h1>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Est beatae, ratione rem libero commodi provident possimus at ipsum voluptatibus accusamus obcaecati veniam? Exercitationem aspernatur cupiditate vel quis doloremque deserunt magnam nemo recusandae voluptas soluta delectus ducimus error aut, maxime molestias minus reprehenderit eius! Vitae aspernatur temporibus sunt magnam tempore nobis? Inventore, ab! Iure, voluptatibus atque expedita animi fuga sed voluptas?.</p>
@@ -32,7 +32,7 @@
     </div>
   </div>
   <div class="home-img">
-    <img src="/images/laptop-image-1.png" alt="Laptop">
+    <img src="/images/laptop-image-1.png"  alt="Laptop">
   </div>
 </section>
 
@@ -43,7 +43,8 @@
     <h1>debitis, ipsum</h1>
     <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ut, alias.</p>
   </div>
- <div class="flex-wrap">  <img class="home img" src="./images/laptop-image-2.png" alt="laptop image">
+  <div class="home2-row">
+  <img class="home2 img" src="./images/laptop-image-2.png" alt="laptop image">
 
  <div class="home2-items">
 <p><b> <i class="fa-solid fa-flask"></i>consectetur adipisicing</b><br>Lorem ipsum dolor sit amet consectetur adipisicing elit. Illum, laborum!</p>
@@ -51,14 +52,14 @@
 <p><b> <i class="fa-solid fa-droplet"></i>consectetur adipisicing</b><br>Lorem ipsum dolor sit amet consectetur adipisicing elit. Illum, laborum!</p>
 <p><b> <i class="fa-solid fa-gears"></i>Responsive Dectetur adipisicing</b><br>Lorem ipsum dolor sit amet consectetur adipisicing elit. Illum, laborum!</p>
 <p><b> <i class="fa fa-crop"></i>consectetur adipisicing</b><br>Lorem ipsum dolor sit amet consectetur adipisicing elit. Illum, laborum!</p>
-</div> 
+</div>
 </div> 
 </section>
 <!-- HOME SECTION 2 END -->
 <hr>
 
 <!-- ABOUT SECTION 1 START-->
-<section class="about">
+<section class="about" id="about">
   <div class="about-top">
     <h2>AMET, CONSECTETUR</h2>
     <p>
@@ -167,8 +168,8 @@
   </div>
 </section>
 
-<!-- ===== CONTACT ===== -->
-<section class="contact">
+<!--  CONTACT -->
+<section class="contact" id="contact">
   <div class="contact-wrapper">
 
     <div class="contact-form">
@@ -191,7 +192,7 @@
   </div>
 </section>
 
-<!-- ===== FOOTER ===== -->
+<!--  FOOTER -->
 <footer class="footer">
 
   <div class="footer-top">
